# lmout

./: .env  .gitignore  README.md  install.sh  lmout.service  pyproject.toml
outputs/: config.json  schedules.json  state.json
src/lock_me_out/: cli.py  core.py  daemon.py  logging_config.py  main.py  manager.py  schema.py  settings.py
src/lock_me_out/utils/: center_message.py  notifications.py  paths.py  processes.py  state.py  time.py
tests/: test_schedules.py  test_time_logic.py
